# derivexex

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md
assets/: doc-theme.css
crates/derivexex/: Cargo.toml
crates/derivexex-pipeline/: Cargo.toml  README.md
crates/derivexex-pipeline/src/: batch.rs  block.rs  channel.rs  config.rs  derive.rs  frame.rs  lib.rs
crates/derivexex-pipeline/src/deposits/: encode.rs  mod.rs  parse.rs
crates/derivexex-pipeline/src/l1_info/: encode.rs  mod.rs
crates/derivexex-pipeline/src/streaming/: l1_follower.rs
crates/derivexex-pipeline/src/tests/: block.rs  deposits.rs  deposits_encode.rs  l1_info.rs  l1_info_encode.rs  mod.rs
crates/derivexex-stream/: Cargo.toml
crates/derivexex-stream/src/: blob_fetcher.rs  error.rs  heads.rs  l1_fetcher.rs  l1_follower.rs  lib.rs  pipeline.rs  reorg.rs  tests.rs  tx_decoder.rs
crates/derivexex-types/: Cargo.toml
crates/derivexex-types/src/: lib.rs
crates/derivexex/src/: config.rs  main.rs
crates/derivexex/src/persistence/: mod.rs  sqlite.rs
crates/derivexex/src/providers/: beacon.rs  blob_provider.rs  mod.rs
crates/derivexex/src/tests/: exex.rs  helpers.rs  integration.rs  mod.rs
src/: config.rs  main.rs  tests.rs
src/persistence/: mod.rs  sqlite.rs  types.rs
src/pipeline/: batch.rs  channel.rs  frame.rs  mod.rs
src/providers/: beacon.rs  beacon_api_types.rs  blob_provider.rs  mod.rs
src/tests/: exex.rs  fixtures.rs  helpers.rs  integration.rs
