[package]
name = "unichain"
version = "0.1.0"
edition = "2021"

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth.git" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git" }

alloy-primitives = "1.5.2"
alloy-consensus = "1.2.1"

futures-util = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

eyre = "0.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

hex = "0.4"

[dev-dependencies]
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth.git" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth.git" }

alloy-eips = "1.2.1"
alloy-signer = "1.2.1"
alloy-signer-local = "1.2.1"
alloy-network = "1.2.1"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
