[workspace]
resolver = "3"
members = [
    "crates/derivexex-types",
    "crates/derivexex-pipeline",
    "crates/derivexex",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
derivexex-types = { path = "crates/derivexex-types" }
derivexex-pipeline = { path = "crates/derivexex-pipeline" }

# Reth
reth = { git = "https://github.com/paradigmxyz/reth.git" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git" }
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth.git" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth.git" }

# Alloy
alloy-primitives = "1.5.2"
alloy-consensus = "1.2.1"
alloy-eips = "1.2.1"
alloy-rpc-types-beacon = "1.2.1"
alloy-serde = "1.2.1"
alloy-rlp = "0.3"
alloy-signer = "1.2.1"
alloy-signer-local = "1.2.1"
alloy-network = "1.2.1"

# Async
async-trait = "0.1"
futures-util = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Error handling
eyre = "0.6"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compression
miniz_oxide = "0.8"
brotli = "7"

# Encoding
unsigned-varint = "0.8"

# Testing
dotenvy = "0.15"

# Build profiles
[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.reproducible]
inherits = "release"
panic = "abort"
codegen-units = 1
incremental = false
