[package]
name = "derivexex-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Async streaming pipeline for Unichain L2 block derivation"

[dependencies]
derivexex-pipeline = { path = "../derivexex-pipeline" }

# Alloy
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-eips = { workspace = true }
alloy-rpc-types-beacon = { workspace = true }
alloy-rlp = { workspace = true }
op-alloy-consensus = "0.23.1"

# Async runtime
tokio = { workspace = true, features = ["full", "sync"] }
tokio-stream = "0.1"
futures = { workspace = true }
async-stream = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# HTTP & serialization
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Caching
schnellru = "0.2.4"

# Utils
bon = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
