[package]
name = "derivexex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OP Stack derivation ExEx for Reth"

[[bin]]
name = "derivexex"
path = "src/main.rs"

[dependencies]
# Internal crates
derivexex-types = { workspace = true }
derivexex-pipeline = { workspace = true }

# Reth
reth = { workspace = true }
reth-exex = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-node-api = { workspace = true }
reth-tracing = { workspace = true }
reth-primitives = { workspace = true }
reth-execution-types = { workspace = true }
reth-transaction-pool = { workspace = true }

# Alloy
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-rpc-types-beacon = { workspace = true }
alloy-serde = { workspace = true }
alloy-rlp = { workspace = true }

# Async
async-trait = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

# Error handling
eyre = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
rusqlite = { workspace = true }

# Utilities
hex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reth-exex-test-utils = { workspace = true }
reth-testing-utils = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-network = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
